--- a/myproject/Makefile
+++ b/myproject/Makefile
@@ -1,2 +1,11 @@
+.DEFAULT_GOAL := generate
 say_hello:
-	echo "Hello World"
+	@echo "Hello World"
+
+generate:
+	@echo "Creating empty text files..."
+	touch file-{1..10}.txt
+
+clean:
+	@echo "Cleaning up..."
+	rm *.txt
